--- a/Statistics/StatsExercise.ipynb
+++ b/Statistics/StatsExercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,12 +11,13 @@
        "0.035470892953328774"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Begum Zubeda - Statistics & Probability Distrubtions Exercise\n",
     "#Let's begin with some hands-on practice exercises\n",
     "#Huge Fruit Basket (HFB) is a grocery shop that sells fruits. It is observed that 20% of their customers complain about the fruits purchased by them for many reasons (bad quality, foul smell and less quantity). On Friday, 30 customers purchased fruits from HFB.\n",
     "\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -226,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of getting atleast twpo heads is  50.0\n"
+      "Probability of getting atleast two heads is  50.0\n"
      ]
     }
    ],
@@ -250,35 +251,65 @@
     "\n",
     "probability = (num_heads / total) * 100\n",
     "\n",
-    "print(\"Probability of getting atleast twpo heads is \", probability)"
+    "print(\"Probability of getting atleast two heads is \", probability)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 11. A textile industry observed that on an average its employees can stitch 34 garment on a particular day with variance 3. What are minimum and maximum number of garments that can be produced?\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean:  32.68421052631579\n",
+      "Maximum:  34\n",
+      "Minimum:  32.267949192431125\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 11. A textile industry observed that on an average its employees can stitch 34 garment on a particular day with variance 3. What are minimum and maximum number of garments that can be produced?\n",
+    "\n",
+    "avg = 34\n",
+    "var = 3\n",
+    "\n",
+    "print(\"Maximum: \", avg)\n",
+    "print(\"Minimum: \", avg - np.sqrt(var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Median:  24.0\n",
       "Mode:  0    17\n",
       "1    45\n",
-      "dtype: int64\n",
-      "Quantile 25%:  16.5\n"
+      "dtype: int64\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "count    19.000000\n",
+       "mean     32.684211\n",
+       "std      24.984557\n",
+       "min       3.000000\n",
+       "25%      16.500000\n",
+       "50%      24.000000\n",
+       "75%      45.000000\n",
+       "max      98.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -288,10 +319,9 @@
     "import pandas as pd\n",
     "data = pd.Series([23, 3, 13, 4, 45, 35, 48, 98, 65, 45, 75, 24, 15, 25, 34, 17, 16, 17, 19])\n",
     "\n",
-    "print(\"Mean: \", np.mean(data))\n",
     "print(\"Median: \", np.median(data))\n",
     "print(\"Mode: \", data.mode())\n",
-    "print(\"Quantile 25%: \", data.quantile(0.25))"
+    "data.describe()"
    ]
   },
   {
@@ -372,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -392,6 +422,8 @@
       "Total  0.419355  0.580645  1.000000\n",
       "\n",
       "The probability that a girl is chosen given that she likes Pizza:  0.6666666666666666\n",
+      "\n",
+      "The probability that a boy likes both the dishes:  0.45161290322580644\n",
       "\n",
       "The probability that the favourite dish for both boys and girls is sizzlers:  0.41935483870967744\n",
       "\n",
@@ -417,24 +449,48 @@
     "print(\"The probability that a girl is chosen given that she likes Pizza: \", prob1)\n",
     "\n",
     "print()\n",
+    "#17. What is the probability that a boy likes both the dishes?\n",
+    "prob3 = probability_df.loc[\"Boys\", \"Total\"]\n",
+    "print(\"The probability that a boy likes both the dishes: \", prob3)\n",
+    "\n",
+    "print()\n",
     "#18. What is the probability that the favourite dish for both boys and girls is sizzlers?\n",
-    "prob2 = probability_df.loc[\"Total\", \"Sizzlers\"]\n",
-    "print(\"The probability that the favourite dish for both boys and girls is sizzlers: \", prob2)\n",
+    "prob3 = probability_df.loc[\"Total\", \"Sizzlers\"]\n",
+    "print(\"The probability that the favourite dish for both boys and girls is sizzlers: \", prob3)\n",
     "\n",
     "print()\n",
     "#19. What is the probability that the favourite food is Pizza given that he is a boy?\n",
     "# P(y='pizza'|x='boy') = P(y='pizza',x='boy') / P(x='boy')\n",
-    "prob3 = probability_df.loc[\"Boys\", \"Pizza\"] / probability_df.loc[\"Boys\", \"Total\"]\n",
-    "print(\"The probability that the favourite food is Pizza given that he is a boy: \", prob3)"
+    "prob4 = probability_df.loc[\"Boys\", \"Pizza\"] / probability_df.loc[\"Boys\", \"Total\"]\n",
+    "print(\"The probability that the favourite food is Pizza given that he is a boy: \", prob4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The correct average BMI:  23.956666666666663\n"
+     ]
+    }
+   ],
    "source": [
-    "#20. An experiment to study obesity in male workers shows that the average BMI for 36 workers is 23.79. While rechecking the forms, it was noticed that the BMI of a worker was misread as 21.32 instead of 27.32. Find the correct average BMI.\n"
+    "#20. An experiment to study obesity in male workers shows that the average BMI for 36 workers is 23.79. While rechecking the forms, it was noticed that the BMI of a worker was misread as 21.32 instead of 27.32. Find the correct average BMI.\n",
+    "\n",
+    "n = 36\n",
+    "w_avg = 23.79\n",
+    "\n",
+    "wrong = 21.32\n",
+    "right = 27.32\n",
+    "\n",
+    "r_avg = ((w_avg * n) - wrong) + right\n",
+    "\n",
+    "correct = r_avg / n\n",
+    "print(\"The correct average BMI: \", correct)"
    ]
   },
   {
