Update Stats Exercise

--- a/Statistics/StatsExercise.ipynb
+++ b/Statistics/StatsExercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "0.035470892953328774"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum:  34\n",
+      "Maximum:  35.732050807568875\n",
       "Minimum:  32.267949192431125\n"
      ]
     }
@@ -274,7 +274,8 @@
     "avg = 34\n",
     "var = 3\n",
     "\n",
-    "print(\"Maximum: \", avg)\n",
+    "#Variance is spread of data from its mean\n",
+    "print(\"Maximum: \", avg + np.sqrt(var))\n",
     "print(\"Minimum: \", avg - np.sqrt(var))"
    ]
   },
