Update python exam

--- a/Python/Exam.ipynb
+++ b/Python/Exam.ipynb
@@ -194,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cumulative Average:  [2.   3.   4.   3.75 3.2 ]\n"
+      "Cumulative Average:  [9.   7.   7.   7.25 6.8 ]\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
     "\n",
     "lst = [9, 5, 7, 8, 5]\n",
     "\n",
-    "cum = list(accumulate([2,4,6,3,1], lambda x, y: x + y)) / np.arange(1, len(lst) + 1)\n",
+    "cum = list(accumulate(lst, lambda x, y: x + y)) / np.arange(1, len(lst) + 1)\n",
     "\n",
     "print(\"Cumulative Average: \", cum)"
    ]
