--- a/Machine Learning Models/NaiveBayes/Mobile Price Range Prediction - NaiveBayes.ipynb
+++ b/Machine Learning Models/NaiveBayes/Mobile Price Range Prediction - NaiveBayes.ipynb
@@ -3826,7 +3826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -3847,7 +3847,7 @@
        " 'talk_time']"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3863,7 +3863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -4003,7 +4003,7 @@
        "4       1208      1212  1411     8     2         15  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4022,7 +4022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4033,7 +4033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -4042,7 +4042,7 @@
        "MinMaxScaler()"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4053,16 +4053,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.22778891 0.68       0.05263158 ... 0.28571429 0.38888889 0.94444444]\n",
+      " [0.34736139 0.         0.         ... 0.85714286 0.16666667 0.27777778]\n",
+      " [0.04141617 0.         0.10526316 ... 0.42857143 0.11111111 0.38888889]\n",
+      " ...\n",
+      " [0.94188377 0.16       0.05263158 ... 0.28571429 0.05555556 0.16666667]\n",
+      " [0.6753507  0.16       0.21052632 ... 0.92857143 0.55555556 0.94444444]\n",
+      " [0.00601202 0.6        0.26315789 ... 1.         0.22222222 0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "data_standardised = scaler.fit_transform(data_selected)"
+    "data_standardised = scaler.fit_transform(data_selected)\n",
+    "print(data_standardised)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -4118,7 +4133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -4127,7 +4142,7 @@
        "OneVsRestClassifier(estimator=GaussianNB())"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4158,7 +4173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4175,7 +4190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -4212,7 +4227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -4251,7 +4266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -4300,7 +4315,7 @@
        "0  Naive Bayes           0.7922      0.804092        0.796667  0.794773"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
