Update House price PCA

--- a/Machine Learning Models/PCA/House price - PCA.ipynb
+++ b/Machine Learning Models/PCA/House price - PCA.ipynb
@@ -810,8 +810,8 @@
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>208500</td>\n",
-       "      <td>18</td>\n",
-       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -834,8 +834,8 @@
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>181500</td>\n",
-       "      <td>45</td>\n",
-       "      <td>45</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -858,8 +858,8 @@
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>223500</td>\n",
+       "      <td>21</td>\n",
        "      <td>20</td>\n",
-       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -882,8 +882,8 @@
        "      <td>WD</td>\n",
        "      <td>Abnorml</td>\n",
        "      <td>140000</td>\n",
-       "      <td>106</td>\n",
-       "      <td>51</td>\n",
+       "      <td>107</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -906,8 +906,8 @@
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>250000</td>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -933,11 +933,11 @@
        "\n",
        "   YrSold SaleType SaleCondition SalePrice  Building_age  Remodel_age  \n",
        "Id                                                                     \n",
-       "1    2008       WD        Normal    208500            18           18  \n",
-       "2    2007       WD        Normal    181500            45           45  \n",
-       "3    2008       WD        Normal    223500            20           19  \n",
-       "4    2006       WD       Abnorml    140000           106           51  \n",
-       "5    2008       WD        Normal    250000            21           21  \n",
+       "1    2008       WD        Normal    208500            19           19  \n",
+       "2    2007       WD        Normal    181500            46           46  \n",
+       "3    2008       WD        Normal    223500            21           20  \n",
+       "4    2006       WD       Abnorml    140000           107           52  \n",
+       "5    2008       WD        Normal    250000            22           22  \n",
        "\n",
        "[5 rows x 82 columns]"
       ]
@@ -1013,27 +1013,27 @@
        "    <tr>\n",
        "      <th>PoolQC</th>\n",
        "      <td>1453</td>\n",
-       "      <td>1771.951220</td>\n",
+       "      <td>99.520548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MiscFeature</th>\n",
        "      <td>1406</td>\n",
-       "      <td>1714.634146</td>\n",
+       "      <td>96.301370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Alley</th>\n",
        "      <td>1369</td>\n",
-       "      <td>1669.512195</td>\n",
+       "      <td>93.767123</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Fence</th>\n",
        "      <td>1179</td>\n",
-       "      <td>1437.804878</td>\n",
+       "      <td>80.753425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FireplaceQu</th>\n",
        "      <td>690</td>\n",
-       "      <td>841.463415</td>\n",
+       "      <td>47.260274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1071,18 +1071,18 @@
        "</div>"
       ],
       "text/plain": [
-       "              Total      Percent\n",
-       "PoolQC         1453  1771.951220\n",
-       "MiscFeature    1406  1714.634146\n",
-       "Alley          1369  1669.512195\n",
-       "Fence          1179  1437.804878\n",
-       "FireplaceQu     690   841.463415\n",
-       "...             ...          ...\n",
-       "HalfBath          0     0.000000\n",
-       "BedroomAbvGr      0     0.000000\n",
-       "KitchenAbvGr      0     0.000000\n",
-       "KitchenQual       0     0.000000\n",
-       "MSSubClass        0     0.000000\n",
+       "              Total    Percent\n",
+       "PoolQC         1453  99.520548\n",
+       "MiscFeature    1406  96.301370\n",
+       "Alley          1369  93.767123\n",
+       "Fence          1179  80.753425\n",
+       "FireplaceQu     690  47.260274\n",
+       "...             ...        ...\n",
+       "HalfBath          0   0.000000\n",
+       "BedroomAbvGr      0   0.000000\n",
+       "KitchenAbvGr      0   0.000000\n",
+       "KitchenQual       0   0.000000\n",
+       "MSSubClass        0   0.000000\n",
        "\n",
        "[82 rows x 2 columns]"
       ]
@@ -1098,7 +1098,7 @@
     "Total = raw_data.isnull().sum().sort_values(ascending=False)\n",
     "\n",
     "# percentage  of missing values\n",
-    "Percent = (raw_data.isnull().sum() * 100 / raw_data.isnull().sum().count()).sort_values(ascending=False)\n",
+    "Percent = (raw_data.isnull().sum() * 100 / raw_data.shape[0]).sort_values(ascending=False)\n",
     "\n",
     "# concat the 'Total' and 'Percent' columns using 'concat' function\n",
     "# 'keys' is the list of column names\n",
@@ -1130,7 +1130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# replcae the NA values in 'Alley' with a valid value, 'None'\n",
+    "# replcae the NA values in 'MasVnrType' with a valid value, 'None'\n",
     "raw_data['MasVnrType'].fillna('None', inplace=True)"
    ]
   },
@@ -1365,8 +1365,8 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2008</td>\n",
-       "      <td>18</td>\n",
-       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1389,8 +1389,8 @@
        "      <td>0</td>\n",
        "      <td>5</td>\n",
        "      <td>2007</td>\n",
-       "      <td>45</td>\n",
-       "      <td>45</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1413,8 +1413,8 @@
        "      <td>0</td>\n",
        "      <td>9</td>\n",
        "      <td>2008</td>\n",
+       "      <td>21</td>\n",
        "      <td>20</td>\n",
-       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1437,8 +1437,8 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2006</td>\n",
-       "      <td>106</td>\n",
-       "      <td>51</td>\n",
+       "      <td>107</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1461,8 +1461,8 @@
        "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>2008</td>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1496,11 +1496,11 @@
        "\n",
        "    Building_age  Remodel_age  \n",
        "Id                             \n",
-       "1             18           18  \n",
-       "2             45           45  \n",
-       "3             20           19  \n",
-       "4            106           51  \n",
-       "5             21           21  \n",
+       "1             19           19  \n",
+       "2             46           46  \n",
+       "3             21           20  \n",
+       "4            107           52  \n",
+       "5             22           22  \n",
        "\n",
        "[5 rows x 35 columns]"
       ]
@@ -1718,7 +1718,7 @@
    ],
    "source": [
     "# use 'eig' function to compute Eigenvalues and Eigenvectors of the covariance vectors\n",
-    "eig_val, eig_vec = np.linalg.eig(cov_mat)\n",
+    "eig_val, eig_vec = eig(cov_mat)\n",
     "\n",
     "print('Eigenvalues: ', '\\n', '\\n', eig_val, '\\n')\n",
     "print('Eigenvectors: ', '\\n', '\\n', eig_vec, '\\n')"
@@ -1740,6 +1740,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[(7.021770499413523+0j), (3.3125501041720953+0j), (2.6201434201098333+0j), (1.8970919779158213+0j), (1.4973466747555353+0j), (0.09992638992418357+0j), (0.13621498924662376+0j), (0.19510871979923156+0j), (0.21395077836552578+0j), (0.30110396633614794+0j), (0.3544084205249457+0j), (0.40161391207370467+0j), (1.2732386321496971+0j), (0.5455713249726756+0j), (0.5574953911006542+0j), (0.6144553317267781+0j), (0.6531069328251312+0j), (0.6652103910693319+0j), (1.1762847353254364+0j), (0.770438352533215+0j), (0.7989825842753202+0j), (0.8421596927472558+0j), (0.854295918939347+0j), (1.1260540287787317+0j), (1.1138691902660702+0j), (0.9171087678623909+0j), (1.068123042312322+0j), (1.043876201199528+0j), (0.9586447711070988+0j), (1.0134998547738208+0j), (0.9803440369826906+0j), (-1.230760234311763e-16+7.216071427229691e-17j), (-1.230760234311763e-16-7.216071427229691e-17j), (1.424272579059852e-16+0j), (2.3879633991438446e-16+0j)]\n",
+      "\n",
+      "         Features         Eigen_Value\n",
+      "0     LotFrontage  7.021770+0.000000j\n",
+      "1         LotArea  3.312550+0.000000j\n",
+      "2       YearBuilt  2.620143+0.000000j\n",
+      "3    YearRemodAdd  1.897092+0.000000j\n",
+      "4      MasVnrArea  1.497347+0.000000j\n",
+      "12      GrLivArea  1.273239+0.000000j\n",
+      "18   KitchenAbvGr  1.176285+0.000000j\n",
+      "23     GarageArea  1.126054+0.000000j\n",
+      "24     WoodDeckSF  1.113869+0.000000j\n",
+      "26  EnclosedPorch  1.068123+0.000000j\n",
+      "\n",
       "[(7.021770499413523+0j), (3.3125501041720953+0j), (2.6201434201098333+0j), (1.8970919779158213+0j), (1.4973466747555353+0j), (1.2732386321496971+0j), (1.1762847353254364+0j), (1.1260540287787317+0j), (1.1138691902660702+0j), (1.068123042312322+0j), (1.043876201199528+0j), (1.0134998547738208+0j), (0.9803440369826906+0j), (0.9586447711070988+0j), (0.9171087678623909+0j), (0.854295918939347+0j), (0.8421596927472558+0j), (0.7989825842753202+0j), (0.770438352533215+0j), (0.6652103910693319+0j), (0.6531069328251312+0j), (0.6144553317267781+0j), (0.5574953911006542+0j), (0.5455713249726756+0j), (0.40161391207370467+0j), (0.3544084205249457+0j), (0.30110396633614794+0j), (0.21395077836552578+0j), (0.19510871979923156+0j), (0.13621498924662376+0j), (0.09992638992418357+0j), (2.3879633991438446e-16+0j), (1.424272579059852e-16+0j), (-1.230760234311763e-16+7.216071427229691e-17j), (-1.230760234311763e-16-7.216071427229691e-17j)]\n"
      ]
     }
@@ -1748,6 +1762,16 @@
     "# Eigenvalues greater than 1\n",
     "# create the list of eigenvalues\n",
     "eig_val = list(eig_val)\n",
+    "print(eig_val)\n",
+    "print()\n",
+    "\n",
+    "cols = pd.Series(df_num.columns.values)\n",
+    "eig_val_df = pd.DataFrame(columns=[\"Features\", \"Eigen_Value\"])\n",
+    "eig_val_df[\"Features\"] = cols\n",
+    "eig_val_df[\"Eigen_Value\"] = eig_val\n",
+    "eig_val_df = eig_val_df.sort_values(by=\"Eigen_Value\", ascending=False)\n",
+    "print(eig_val_df.head(10))\n",
+    "print()\n",
     "\n",
     "#'sort(reverse=True)' will sort the eigenvalues in the descending order\n",
     "eig_val.sort(reverse=True)\n",
@@ -1814,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1892,20 +1916,20 @@
        "         0.01428159+0.j, -0.26832427+0.j]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eigenvector = eig_vec[:, 0:5]\n",
+    "eigenvector = eig_vec[:, eig_val_df.index.values[0:5]]\n",
     "\n",
     "eigenvector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1929,11 +1953,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PC1</th>\n",
-       "      <th>PC2</th>\n",
-       "      <th>PC3</th>\n",
-       "      <th>PC4</th>\n",
-       "      <th>PC5</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>YearBuilt</th>\n",
+       "      <th>YearRemodAdd</th>\n",
+       "      <th>MasVnrArea</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1982,14 +2006,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                  PC1                 PC2                 PC3  \\\n",
+       "          LotFrontage             LotArea           YearBuilt  \\\n",
        "0 -1.571468+0.000000j  0.233699+0.000000j -1.586585+0.000000j   \n",
        "1 -0.199890+0.000000j  0.835867+0.000000j  1.050234+0.000000j   \n",
        "2 -1.740971+0.000000j  0.251788+0.000000j -1.391157+0.000000j   \n",
        "3  1.470652+0.000000j -1.877190+0.000000j  1.515307+0.000000j   \n",
        "4 -4.216754+0.000000j -1.116376+0.000000j -0.533713+0.000000j   \n",
        "\n",
-       "                  PC4                 PC5  \n",
+       "         YearRemodAdd          MasVnrArea  \n",
        "0 -2.219473+0.000000j  0.715615+0.000000j  \n",
        "1  0.097077+0.000000j -0.627275+0.000000j  \n",
        "2 -1.637273+0.000000j  0.046151+0.000000j  \n",
@@ -1997,7 +2021,7 @@
        "4 -1.621483+0.000000j -0.334647+0.000000j  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2029,7 @@
    "source": [
     "# take the dot product of 'df_num_std' with 'eigenvector' to obtain new dataset\n",
     "# create a dataframe of pricipal components\n",
-    "df_pca = pd.DataFrame(df_num_std.dot(eigenvector), columns=['PC1', 'PC2', 'PC3', 'PC4', 'PC5'])\n",
+    "df_pca = pd.DataFrame(df_num_std.dot(eigenvector), columns=list(eig_val_df[\"Features\"])[0:5])\n",
     "\n",
     "# head() to display top 5 rows\n",
     "df_pca.head()"
@@ -2013,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2022,7 +2046,7 @@
        "(1460, 5)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2041,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2056,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2080,11 +2104,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PC1</th>\n",
-       "      <th>PC2</th>\n",
-       "      <th>PC3</th>\n",
-       "      <th>PC4</th>\n",
-       "      <th>PC5</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>YearBuilt</th>\n",
+       "      <th>YearRemodAdd</th>\n",
+       "      <th>MasVnrArea</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2133,22 +2157,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        PC1       PC2       PC3       PC4       PC5\n",
-       "0  1.571352 -0.240622 -1.586777 -2.241474  0.753565\n",
-       "1  0.199709 -0.835527  1.042285  0.089567 -0.634687\n",
-       "2  1.741028 -0.250540 -1.389540 -1.627933  0.038217\n",
-       "3 -1.470503  1.871470  1.526313 -0.195221 -1.759654\n",
-       "4  4.216874  1.125024 -0.532845 -1.588267 -0.391245"
+       "   LotFrontage   LotArea  YearBuilt  YearRemodAdd  MasVnrArea\n",
+       "0     1.571352 -0.240622  -1.586777     -2.241474    0.753565\n",
+       "1     0.199709 -0.835527   1.042285      0.089567   -0.634687\n",
+       "2     1.741028 -0.250540  -1.389540     -1.627933    0.038217\n",
+       "3    -1.470503  1.871470   1.526313     -0.195221   -1.759654\n",
+       "4     4.216874  1.125024  -0.532845     -1.588267   -0.391245"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# create a dataframe of principal components\n",
-    "PCA_df = pd.DataFrame(PrincipalComponents, columns=['PC1', 'PC2', 'PC3', 'PC4', 'PC5'])\n",
+    "PCA_df = pd.DataFrame(PrincipalComponents, columns=list(eig_val_df[\"Features\"])[0:5])\n",
     "\n",
     "# head() to display top 5 rows\n",
     "PCA_df.head()"
