--- a/Machine Learning Models/LinearRegression/House_Prediction2_Linear_Regression.ipynb
+++ b/Machine Learning Models/LinearRegression/House_Prediction2_Linear_Regression.ipynb
@@ -501,8 +501,8 @@
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>208500</td>\n",
-       "      <td>18</td>\n",
-       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -525,8 +525,8 @@
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>181500</td>\n",
-       "      <td>45</td>\n",
-       "      <td>45</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -549,8 +549,8 @@
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>223500</td>\n",
+       "      <td>21</td>\n",
        "      <td>20</td>\n",
-       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -573,8 +573,8 @@
        "      <td>WD</td>\n",
        "      <td>Abnorml</td>\n",
        "      <td>140000</td>\n",
-       "      <td>106</td>\n",
-       "      <td>51</td>\n",
+       "      <td>107</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -597,8 +597,8 @@
        "      <td>WD</td>\n",
        "      <td>Normal</td>\n",
        "      <td>250000</td>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -621,11 +621,11 @@
        "4         Lvl    AllPub  ...   NaN         NaN       0     12   2008       WD   \n",
        "\n",
        "  SaleCondition SalePrice Building_age  Remodel_age  \n",
-       "0        Normal    208500           18           18  \n",
-       "1        Normal    181500           45           45  \n",
-       "2        Normal    223500           20           19  \n",
-       "3       Abnorml    140000          106           51  \n",
-       "4        Normal    250000           21           21  \n",
+       "0        Normal    208500           19           19  \n",
+       "1        Normal    181500           46           46  \n",
+       "2        Normal    223500           21           20  \n",
+       "3       Abnorml    140000          107           52  \n",
+       "4        Normal    250000           22           22  \n",
        "\n",
        "[5 rows x 83 columns]"
       ]
@@ -1029,8 +1029,8 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2008</td>\n",
-       "      <td>18</td>\n",
-       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1053,8 +1053,8 @@
        "      <td>0</td>\n",
        "      <td>5</td>\n",
        "      <td>2007</td>\n",
-       "      <td>45</td>\n",
-       "      <td>45</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1077,8 +1077,8 @@
        "      <td>0</td>\n",
        "      <td>9</td>\n",
        "      <td>2008</td>\n",
+       "      <td>21</td>\n",
        "      <td>20</td>\n",
-       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1101,8 +1101,8 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2006</td>\n",
-       "      <td>106</td>\n",
-       "      <td>51</td>\n",
+       "      <td>107</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1125,8 +1125,8 @@
        "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>2008</td>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1149,18 +1149,18 @@
        "4           0        490         1145  ...           84              0   \n",
        "\n",
        "   3SsnPorch  ScreenPorch  PoolArea  MiscVal  MoSold  YrSold  Building_age  \\\n",
-       "0          0            0         0        0       2    2008            18   \n",
-       "1          0            0         0        0       5    2007            45   \n",
-       "2          0            0         0        0       9    2008            20   \n",
-       "3          0            0         0        0       2    2006           106   \n",
-       "4          0            0         0        0      12    2008            21   \n",
+       "0          0            0         0        0       2    2008            19   \n",
+       "1          0            0         0        0       5    2007            46   \n",
+       "2          0            0         0        0       9    2008            21   \n",
+       "3          0            0         0        0       2    2006           107   \n",
+       "4          0            0         0        0      12    2008            22   \n",
        "\n",
        "   Remodel_age  \n",
-       "0           18  \n",
-       "1           45  \n",
-       "2           19  \n",
-       "3           51  \n",
-       "4           21  \n",
+       "0           19  \n",
+       "1           46  \n",
+       "2           20  \n",
+       "3           52  \n",
+       "4           22  \n",
        "\n",
        "[5 rows x 36 columns]"
       ]
@@ -1400,6 +1400,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "        Features         Eigen_Value\n",
+      "0             Id  7.021792+0.000000j\n",
+      "1    LotFrontage  3.313183+0.000000j\n",
+      "2        LotArea  2.620144+0.000000j\n",
+      "3      YearBuilt  1.897144+0.000000j\n",
+      "4   YearRemodAdd  1.498571+0.000000j\n",
+      "12  LowQualFinSF  1.276872+0.000000j\n",
+      "18  BedroomAbvGr  1.176471+0.000000j\n",
+      "19  KitchenAbvGr  1.134475+0.000000j\n",
+      "20  TotRmsAbvGrd  1.125928+0.000000j\n",
+      "21    Fireplaces  1.093437+0.000000j\n",
+      "\n",
       "[(7.021791732999374+0j), (3.3131834374078046+0j), (2.620143757200951+0j), (1.8971438113148202+0j), (1.4985711938914759+0j), (1.2768724520305208+0j), (1.1764710217140895+0j), (1.1344750158558465+0j), (1.1259276821921596+0j), (1.093436934284549+0j), (1.0440116632724479+0j), (1.028966915423302+0j), (0.999080608411793+0j), (0.966885770577017+0j), (0.957630936675665+0j), (0.8940257153337101+0j), (0.8459661650894021+0j), (0.834764728975647+0j), (0.7975648985595455+0j), (0.7704299359464271+0j), (0.6591326308403379+0j), (0.6528406036790155+0j), (0.6144311862459941+0j), (0.5571152482491212+0j), (0.5439590064615208+0j), (0.40112826321759004+0j), (0.3537626440686832+0j), (0.30038045588219286+0j), (0.2138014724307727+0j), (0.19464048901475797+0j), (0.13621177055098752+0j), (0.09992628674667764+0j), (-4.832723321260668e-17+0j), (-5.2256821368847057e-17+1.3829022372414312e-16j), (-5.2256821368847057e-17-1.3829022372414312e-16j), (-4.124131623691277e-16+0j)]\n"
      ]
     }
@@ -1408,6 +1420,14 @@
     "# Eigenvalues greater than 1\n",
     "# create the list of eigenvalues\n",
     "eig_val = list(eig_val)\n",
+    "\n",
+    "cols = pd.Series(df_num.columns.values)\n",
+    "eig_val_df = pd.DataFrame(columns=[\"Features\", \"Eigen_Value\"])\n",
+    "eig_val_df[\"Features\"] = cols\n",
+    "eig_val_df[\"Eigen_Value\"] = eig_val\n",
+    "eig_val_df = eig_val_df.sort_values(by=\"Eigen_Value\", ascending=False)\n",
+    "print(eig_val_df.head(10))\n",
+    "print()\n",
     "\n",
     "#'sort(reverse=True)' will sort the eigenvalues in the descending order\n",
     "eig_val.sort(reverse=True)\n",
@@ -1531,11 +1551,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PC1</th>\n",
-       "      <th>PC2</th>\n",
-       "      <th>PC3</th>\n",
-       "      <th>PC4</th>\n",
-       "      <th>PC5</th>\n",
+       "      <th>Id</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>YearBuilt</th>\n",
+       "      <th>YearRemodAdd</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1584,12 +1604,12 @@
        "</div>"
       ],
       "text/plain": [
-       "        PC1       PC2       PC3       PC4       PC5\n",
-       "0  1.574866 -0.272223 -1.587786 -2.179543  0.923553\n",
-       "1  0.203197 -0.858113  1.050182  0.029035 -0.766689\n",
-       "2  1.744067 -0.281325 -1.398923 -1.619116  0.149829\n",
-       "3 -1.467107  1.832697  1.515536 -0.118626 -1.524802\n",
-       "4  4.219838  1.091179 -0.538118 -1.612861 -0.263856"
+       "         Id  LotFrontage   LotArea  YearBuilt  YearRemodAdd\n",
+       "0  1.574866    -0.272223 -1.587786  -2.179543      0.923553\n",
+       "1  0.203197    -0.858113  1.050182   0.029035     -0.766689\n",
+       "2  1.744067    -0.281325 -1.398923  -1.619116      0.149829\n",
+       "3 -1.467107     1.832697  1.515536  -0.118626     -1.524802\n",
+       "4  4.219838     1.091179 -0.538118  -1.612861     -0.263856"
       ]
      },
      "execution_count": 33,
@@ -1599,7 +1619,7 @@
    ],
    "source": [
     "# create a dataframe of principal components\n",
-    "PCA_df = pd.DataFrame(PrincipalComponents, columns=['PC1', 'PC2', 'PC3', 'PC4', 'PC5'])\n",
+    "PCA_df = pd.DataFrame(PrincipalComponents, columns=list(eig_val_df[\"Features\"])[0:5])\n",
     "\n",
     "# head() to display top 5 rows\n",
     "PCA_df.head()"
@@ -1702,21 +1722,21 @@
       "Dep. Variable:              SalePrice   R-squared:                       0.721\n",
       "Model:                            OLS   Adj. R-squared:                  0.719\n",
       "Method:                 Least Squares   F-statistic:                     524.7\n",
-      "Date:                Fri, 31 Dec 2021   Prob (F-statistic):          1.65e-278\n",
-      "Time:                        22:05:27   Log-Likelihood:                -793.60\n",
+      "Date:                Sun, 27 Feb 2022   Prob (F-statistic):          1.65e-278\n",
+      "Time:                        16:30:28   Log-Likelihood:                -793.60\n",
       "No. Observations:                1022   AIC:                             1599.\n",
       "Df Residuals:                    1016   BIC:                             1629.\n",
       "Df Model:                           5                                         \n",
       "Covariance Type:            nonrobust                                         \n",
-      "==============================================================================\n",
-      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------\n",
-      "const         -0.0041      0.017     -0.251      0.802      -0.037       0.028\n",
-      "PC1            0.3164      0.006     50.933      0.000       0.304       0.329\n",
-      "PC2            0.0006      0.009      0.062      0.950      -0.017       0.018\n",
-      "PC3            0.0382      0.010      3.798      0.000       0.018       0.058\n",
-      "PC4           -0.0297      0.012     -2.492      0.013      -0.053      -0.006\n",
-      "PC5            0.0186      0.013      1.415      0.157      -0.007       0.044\n",
+      "================================================================================\n",
+      "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------\n",
+      "const           -0.0041      0.017     -0.251      0.802      -0.037       0.028\n",
+      "Id               0.3164      0.006     50.933      0.000       0.304       0.329\n",
+      "LotFrontage      0.0006      0.009      0.062      0.950      -0.017       0.018\n",
+      "LotArea          0.0382      0.010      3.798      0.000       0.018       0.058\n",
+      "YearBuilt       -0.0297      0.012     -2.492      0.013      -0.053      -0.006\n",
+      "YearRemodAdd     0.0186      0.013      1.415      0.157      -0.007       0.044\n",
       "==============================================================================\n",
       "Omnibus:                      399.200   Durbin-Watson:                   2.117\n",
       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            58433.089\n",
@@ -1772,27 +1792,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>PC1</td>\n",
+       "      <td>Id</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>PC2</td>\n",
+       "      <td>LotFrontage</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>PC3</td>\n",
+       "      <td>LotArea</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>PC4</td>\n",
+       "      <td>YearBuilt</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>PC5</td>\n",
+       "      <td>YearRemodAdd</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1800,13 +1820,13 @@
        "</div>"
       ],
       "text/plain": [
-       "  Features  VIF\n",
-       "0    const  1.0\n",
-       "1      PC1  1.0\n",
-       "2      PC2  1.0\n",
-       "3      PC3  1.0\n",
-       "4      PC4  1.0\n",
-       "5      PC5  1.0"
+       "       Features  VIF\n",
+       "0         const  1.0\n",
+       "1            Id  1.0\n",
+       "2   LotFrontage  1.0\n",
+       "3       LotArea  1.0\n",
+       "4     YearBuilt  1.0\n",
+       "5  YearRemodAdd  1.0"
       ]
      },
      "execution_count": 40,
@@ -2003,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,13 +2031,6 @@
     "\n",
     "price = 0.31*PC1 + 0.00*PC2 + 0.03*PC3 + 0.02*PC4 + 0.01*PC5"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
