HamSpam case study update

--- a/Deep Learning/SpamHam1.ipynb
+++ b/Deep Learning/SpamHam1.ipynb
@@ -314,7 +314,7 @@
     "    filtered_words = [w for w in tokens if len(w) > 2 if not w in stopwords.words('english')]  #Words that are not in stop words & occured more than 2 times\n",
     "    stem_words = [stemmer.stem(w) for w in filtered_words]  #Stemming\n",
     "    lemma_words = [lemmatizer.lemmatize(w) for w in stem_words]  #Lemmatize\n",
-    "    return \" \".join(filtered_words)  #Join the filtered tokens"
+    "    return \" \".join(lemma_words)  #Join the filtered tokens"
    ]
   },
   {
@@ -356,16 +356,16 @@
     {
      "data": {
       "text/plain": [
-       "0       jurong point crazy available bugis great world...\n",
-       "1                                      lar joking wif oni\n",
-       "2       free entry wkly comp win cup final tkts may te...\n",
-       "3                           dun say early hor already say\n",
-       "4                  nah think goes usf lives around though\n",
+       "0       jurong point crazi avail bugi great world buff...\n",
+       "1                                        lar joke wif oni\n",
+       "2       free entri wkli comp win cup final tkt may tex...\n",
+       "3                           dun say earli hor alreadi say\n",
+       "4                    nah think goe usf live around though\n",
        "                              ...                        \n",
-       "5567    time tried contact pound prize claim easy call...\n",
-       "5568                                 going esplanade home\n",
-       "5569                                pity mood suggestions\n",
-       "5570    guy bitching acted like interested buying some...\n",
+       "5567    time tri contact pound prize claim easi call p...\n",
+       "5568                                     go esplanad home\n",
+       "5569                                    piti mood suggest\n",
+       "5570    guy bitch act like interest buy someth el next...\n",
        "5571                                       rofl true name\n",
        "Name: SMS, Length: 5572, dtype: object"
       ]
@@ -430,7 +430,7 @@
     {
      "data": {
       "text/plain": [
-       "(5572, 7386)"
+       "(5572, 6083)"
       ]
      },
      "execution_count": 16,
@@ -451,8 +451,8 @@
     {
      "data": {
       "text/plain": [
-       "<5572x7386 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 41640 stored elements in Compressed Sparse Row format>"
+       "<5572x6083 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 41349 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 17,
@@ -527,8 +527,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4736, 7386)\n",
-      "(836, 7386)\n",
+      "(4736, 6083)\n",
+      "(836, 6083)\n",
       "(4736,)\n",
       "(836,)\n"
      ]
@@ -584,19 +584,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[625  83]\n",
-      " [ 14 114]]\n",
+      "[[610  98]\n",
+      " [ 15 113]]\n",
       "\n",
-      "0.8839712918660287\n",
+      "0.8648325358851675\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.98      0.88      0.93       708\n",
-      "           1       0.58      0.89      0.70       128\n",
+      "           0       0.98      0.86      0.92       708\n",
+      "           1       0.54      0.88      0.67       128\n",
       "\n",
-      "    accuracy                           0.88       836\n",
-      "   macro avg       0.78      0.89      0.81       836\n",
-      "weighted avg       0.92      0.88      0.89       836\n",
+      "    accuracy                           0.86       836\n",
+      "   macro avg       0.76      0.87      0.79       836\n",
+      "weighted avg       0.91      0.86      0.88       836\n",
       "\n",
       "\n"
      ]
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ec093363-ded2-4254-bc19-7d63099cb601",
    "metadata": {},
    "outputs": [],
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "2b8e291f-58ec-4e89-a1d1-b1da0484460b",
    "metadata": {},
    "outputs": [],
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "43acc51a-1367-4d40-a627-a6668390310d",
    "metadata": {},
    "outputs": [],
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "917081bb-e810-4533-aa8b-befd5eb780a8",
    "metadata": {},
    "outputs": [],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "b994f0a3-a60b-4abf-ac98-3656376da92a",
    "metadata": {},
    "outputs": [
@@ -680,8 +680,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8202, 7386)\n",
-      "(1448, 7386)\n",
+      "(8202, 6083)\n",
+      "(1448, 6083)\n",
       "(8202,)\n",
       "(1448,)\n"
      ]
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "8b27bf2c-9edf-4636-ba4a-0c59fec757ba",
    "metadata": {},
    "outputs": [],
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "225594f6-98d6-4055-88cd-542452c74e47",
    "metadata": {},
    "outputs": [],
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "342b7cea-d15d-4ccf-bf17-d40c24aad5cb",
    "metadata": {},
    "outputs": [
@@ -737,19 +737,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[641  92]\n",
+      "[[616 117]\n",
       " [  0 715]]\n",
       "\n",
-      "0.93646408839779\n",
+      "0.9191988950276243\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.87      0.93       733\n",
-      "           1       0.89      1.00      0.94       715\n",
+      "           0       1.00      0.84      0.91       733\n",
+      "           1       0.86      1.00      0.92       715\n",
       "\n",
-      "    accuracy                           0.94      1448\n",
-      "   macro avg       0.94      0.94      0.94      1448\n",
-      "weighted avg       0.94      0.94      0.94      1448\n",
+      "    accuracy                           0.92      1448\n",
+      "   macro avg       0.93      0.92      0.92      1448\n",
+      "weighted avg       0.93      0.92      0.92      1448\n",
       "\n",
       "\n"
      ]
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "402d4066-4651-41f2-8024-10e413b0f25e",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "d6e6d494-4026-40f0-9a64-aec0be1fbc5e",
    "metadata": {},
    "outputs": [],
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "278f4397-539a-47cc-b111-e9700334ffd5",
    "metadata": {},
    "outputs": [
@@ -810,14 +810,14 @@
      "output_type": "stream",
      "text": [
       "[[732   1]\n",
-      " [  4 711]]\n",
+      " [  2 713]]\n",
       "\n",
-      "0.9965469613259669\n",
+      "0.9979281767955801\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      1.00      1.00       733\n",
-      "           1       1.00      0.99      1.00       715\n",
+      "           0       1.00      1.00      1.00       733\n",
+      "           1       1.00      1.00      1.00       715\n",
       "\n",
       "    accuracy                           1.00      1448\n",
       "   macro avg       1.00      1.00      1.00      1448\n",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "97a1a9be-42c8-484f-963c-3db1d9cfcea8",
    "metadata": {},
    "outputs": [],
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "5e0c5ef7-b8f5-4c6c-8814-3710d8a67b48",
    "metadata": {},
    "outputs": [],
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "84bdbd19-5f31-4317-a1ef-9478f25df5c6",
    "metadata": {},
    "outputs": [
@@ -874,14 +874,14 @@
      "output_type": "stream",
      "text": [
       "[[732   1]\n",
-      " [  4 711]]\n",
+      " [  2 713]]\n",
       "\n",
-      "0.9965469613259669\n",
+      "0.9979281767955801\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      1.00      1.00       733\n",
-      "           1       1.00      0.99      1.00       715\n",
+      "           0       1.00      1.00      1.00       733\n",
+      "           1       1.00      1.00      1.00       715\n",
       "\n",
       "    accuracy                           1.00      1448\n",
       "   macro avg       1.00      1.00      1.00      1448\n",
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "d71c797e-d681-48bd-80d0-30c14d464b3b",
    "metadata": {},
    "outputs": [],
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "58c8429a-67cb-4394-aff8-670e6e4baa71",
    "metadata": {},
    "outputs": [],
