--- a/Machine Learning Models/Projects/XRay_PneumoniaPrediction.ipynb
+++ b/Machine Learning Models/Projects/XRay_PneumoniaPrediction.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "For the analysis of chest x-ray images, all chest radiographs were initially screened for quality control by removing all low quality or unreadable scans. The diagnoses for the images were then graded by two expert physicians before being cleared for training the AI system. In order to account for any grading errors, the evaluation set was also checked by a third expert. \n",
     "\n",
-    "In this case, several deep learning mechanisms can be applied on these X-Ray images to extract unique features and classify **Normal** and **Pneumonia** patients. The normal chest X-ray depicts clear lungs without any areas of abnormal opacification in the image. Pneumonia typically exhibits a focal lobar consolidation, in this case in the right upper lobe (white arrows), or manifests with a more diffuse \"interstitial\" pattern in both lungs."
+    "In this case, several deep learning models can be applied on these X-Ray images to extract unique features and classify **Normal** and **Pneumonia** patients. The normal chest X-ray depicts clear lungs without any areas of abnormal opacification in the image. Pneumonia typically exhibits a focal lobar consolidation, in this case in the right upper lobe (white arrows), or manifests with a more diffuse \"interstitial\" pattern in both lungs."
    ]
   },
   {
@@ -6062,7 +6062,7 @@
    "metadata": {},
    "source": [
     "<a id='normalize_data'></a>\n",
-    "### 1.1. Normalizing Data"
+    "### 1.1. Normalizing Data & Image Augmentation"
    ]
   },
   {
@@ -8635,6 +8635,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above count we can see that around 96.05% of **Pneumonia** patients were predicted correctly and 93.59% of **Normal** patients were predicted correctly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -8862,6 +8869,13 @@
     "plt.title(\"Actual NORMAL & PNEUMONIA count\")\n",
     "plt.xticks([0, 1], ['NORMAL', 'PNEUMONIA'])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above count we can see that around 97% of **Pneumonia** patients were predicted correctly and 94.87% of **Normal** patients were predicted correctly."
    ]
   },
   {
@@ -9100,6 +9114,13 @@
     "plt.title(\"Actual NORMAL & PNEUMONIA count\")\n",
     "plt.xticks([0, 1], ['NORMAL', 'PNEUMONIA'])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above count we can see that around 86.28% of **Pneumonia** patients were predicted correctly and 73.04% of **Normal** patients were predicted correctly."
    ]
   },
   {
@@ -9348,6 +9369,13 @@
     "plt.title(\"Actual NORMAL & PNEUMONIA count\")\n",
     "plt.xticks([0, 1], ['NORMAL', 'PNEUMONIA'])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above count we can see that around 96.77% of **Pneumonia** patients were predicted correctly and 94.44% of **Normal** patients were predicted correctly."
    ]
   },
   {
